# uibk_cpp_2021

exercises/task03/: CMakeLists.txt
exercises/task03/libBar/: CMakeLists.txt
exercises/task03/libBaz/: CMakeLists.txt
exercises/task03/libFoo/: CMakeLists.txt
exercises/task06/: cust_unique.cpp
exercises/task08/: task08.cpp
exercises/task17/: task17.cpp
exercises/task18/: task18.cpp
